# Tiny-Swarm-World

./: .env.example  .gitattributes  .gitignore  .importlinter  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  GITHUB_SYNC_REPORT.md  IMPORT_READY_GITHUB_ISSUES.md  OPERATIONAL_READINESS_CHECKLIST.md  QUALITY.md  README.md  TASKLIST.md  agent.md  commit_push.md  environment.yml  github_issues_import.json  github_project_import.csv  install.sh  pylock.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  sonar-project.properties  tsw  window-wsl-setup.ps1
.agents/: AGENTS.md
.agents/activation/: __init__.py  resolver.py
.agents/orchestrator/: responsibility-model.md  routing-rules.md  swarm-orchestrator.md
.agents/prompts/: requirement-intake.md  skill-audit.md  skills-update.md  slice-execute.md  workflow-create.md  workflow-execute.md
.agents/roles/: microservice-senior-expert.md  senior-analysis-storage-architect.md  senior-devops.md  senior-documentation-engineer.md  senior-tester.md  (+13 more)
.codex/: AGENTS.md  config.toml
docker/: AGENTS.md  quality_gate.py  requirements.txt  tiny_swarm_world.py
documentation/: Howto.adoc  README.adoc  arc42.adoc  backlog-using-pythonic-for-redisiging-the-lib.md  document.adoc  user-handbook.adoc
infra/: AGENTS.md  utils.sh
tests/: test_install_debugger.py  test_install_script.py  test_installer.py  test_package_entrypoint.py  test_package_metadata.py  test_security_gate.py  test_windows_wsl_bridge_assets.py
tools/: install_debugger.py  preflight.py  quality_gate.py  security_gate.py  skill_audit.py
(+1311 files in other folders)
