[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-swarm-world"
version = "0.2.0"
description = "Linux/WSL local infrastructure automation for Tiny Swarm World"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.12,<3",
  "PyYAML>=6.0.3,<7",
  "requests>=2.34.2,<3",
  "ruamel.yaml>=0.18.16,<0.19",
]

[project.scripts]
tiny-swarm-world = "tiny_swarm_world.__main__:cli"

[tool.setuptools.packages.find]
where = ["src"]
